UI/css/styles.css
@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');

/*Defaults*/
html {
    -webkit-font-smoothing: antialiased!important;
    -moz-osx-font-smoothing: grayscale!important;
    -ms-font-smoothing: antialiased!important;
}

body {
    font-family: 'Inconsolata', monospace;
    font-size:15px;
    width: 100%;
    min-height: 100vh;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Inconsolata', monospace;
    font-weight: 700;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

section {
    padding-top: 2em;
    padding-bottom: 2em;
}

section:nth-child(odd) {
    background-color: #fafbfc;
}

.container {
    padding-right: 1rem;
    padding-left: 1rem;
}

p {
    line-height: 140%;
}

/*Mixins*/
.bg-color-white {
    background-color: white;
}

.margin-tb-1 {
    margin-top: 1em;
    margin-bottom: 1em;
}

.naira {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
}

.align-center {
    text-align: center;
}

.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}

.display-flex-row {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}

.flex-space {
    justify-content: space-between;
}

.z-0 {
    z-index: 0;
}

.z-1 {
    z-index: 1;
}

.text-muted {
    color: #6a737d;
}

.padding-lr-1 {
    padding-left: 1rem;
    padding-right: 1rem;
}

.small-text {
    font-size: small;
}

.margin-b-1 {
    margin-bottom: 1em;
}

.margin-b-2 {
    margin-bottom: 2em;
}

.margin-t-1 {
    margin-top: 1em;
}

.margin-t-2 {
    margin-top: 2em;
}

.margin-t-4 {
    margin-top: 4em;
}

.list-unstyled {
    list-style: none;
}

/*Features*/

/*Animations*/
.rotate {
    -webkit-transition: -webkit-transform .8s ease-in-out;
    transition: transform .8s ease-in-out;
}
.rotate:hover {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
}

.zoom {
    -webkit-transform: scale(1);
    transform: scale(1);
    transition: all ease 500ms;
}

.zoom:hover {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
    transition: all ease 500ms;
}

.footer {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    font-size: .8rem;
}

#header-bg {
    position: relative;
    padding-top: 3rem;
    padding-bottom: .5em;
    min-height: 450px;
    background: linear-gradient(#46c75e, #164124);
    -webkit-background-size: 60%;
    -moz-background-size: 60%;
    -o-background-size: 60%;
    background-size: 60%;
    box-shadow: 0 1px 3px rgba(180, 180, 180, 0.12), 0 1px 2px rgba(168, 168, 168, 0.24);
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

#header-bg > h1 {
    font-weight: 700;
}

#inner-header-contents {
    max-width: 35rem;
}

.button {
    padding: 10px 20px;
    font-size: .8em;
    font-weight: 700;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    border-radius: 3px;
    transition: .2s;
    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
    font-family: inherit;
}

.navbar {
    font-size: 14px;
    box-shadow: 0 10px 22px rgba(0, 0, 0, 0.05);
    background-color: white;
    position: fixed;
    z-index: 2;
    width: 100%;
    padding: 1em;
}

.feature-image {
    max-width: 200px;
    margin-bottom: 1.5rem;
}

.main-nav {
    list-style-type: none;
    display: none;
}

.nav-links {
    text-decoration: none;
    color: #000000;
    font-weight: 700;
}

.main-nav li {
    text-align: center;
    margin: 15px auto;
}

ul li ul {
    visibility: hidden;
    opacity: 0;
    width: 100%;
    z-index: 100;
    position: absolute;
    transition: all 0.5s ease;
    margin-top: 1rem;
    left: 0;
    display: none;
}

.logo > img {
    height: 40px;
}

.navbar-toggle {
    position: absolute;
    top: 20px;
    right: 20px;
    cursor: pointer;
    color: rgba(255, 255, 255, 0.8);
    font-size: 24px;
}

.active {
    display: block;
}
/* ... */

